# horizon

./: .gitignore  CMakeLists.txt  README.md  compile.rc  makefile
.github/workflows/: cmake-single-platform.yml
img/: heap_array.graphml
sample/: main.hr
src/colorize/: colorize.cc  colorize.h
src/defines/: defines.h  keywords_primary_data_types.cc  keywords_primary_data_types.h
src/entry/: horizon.cc
src/errors/: errors.cc  errors.hh
src/lexer/: lexer.cc  lexer.hh
src/lexer/lexer_errors/: lexer_errors.cc  lexer_errors.hh
src/misc/: exit_heap_fail.hh  is_directory.hh  load_file.hh  misc.cc  misc.hh
src/misc/file/: file.hh
src/parser/: grammar.gr  parser.cc  parser.hh
src/parser/ast/: ast.hh
src/parser/function_declaration/: function_declaration.hh
src/token/: token.hh
src/token_type/: token_type.hh
